[package]
name = "learn-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.14" 
cgmath = "0.18" 
env_logger = "0.9.1" 
futures = "0.3.25" 
gfx-hal = "0.9" 
image = "0.24.4" 
log = "0.4" 
pollster = "0.2.5" 
winit = "0.27.5"  
anyhow = "1.0.66"

[[example]]
name="ch01_helloworld"
path="examples/ch01/hello_world.rs"

[[example]]
name="ch01_hellowindow"
path="examples/ch01/hello_window.rs"

[[example]]
name="ch02_first_triangle"
path="examples/ch02/first_triangle.rs"

